crop recomendation modified

--- a/crop_recomendation.ipynb
+++ b/crop_recomendation.ipynb
@@ -43,6 +43,7 @@
     "import plotly.graph_objects as go\n",
     "import plotly.express as px\n",
     "from plotly.subplots import make_subplots\n",
+    "import joblib\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
@@ -17687,8 +17688,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Save the Scaler for prediction"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['models/crop_recomend_scaler.pkl']"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "joblib.dump(scaler,\"models/crop_recomend_scaler.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17697,7 +17725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17718,7 +17746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -17731,7 +17759,7 @@
        " 'xGBoost': 1.0}"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -17743,7 +17771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17754,7 +17782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17814,7 +17842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -17918,7 +17946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -18029,7 +18057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -18133,7 +18161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -18237,7 +18265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -18341,7 +18369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -18443,7 +18471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -18493,16 +18521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import joblib\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -18511,7 +18530,7 @@
        "['models/crop_recomend_model.pkl']"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -18523,7 +18542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
